--- a/libefb-c/Cargo.toml
+++ b/libefb-c/Cargo.toml
@@ -19,7 +19,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["staticlib"]
+crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 efb = { path = "../efb" }
