examples: Add a flight planner example
The example shows how to use the FMS and route planner to create a flight plan
from a route including performance data.

Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/efb/Cargo.toml
+++ b/efb/Cargo.toml
@@ -20,5 +20,8 @@ edition = "2021"
 license = "Apache-2.0"
 keywords = [ "aviation", "EFB"]
 
-[dependencies.arinc424]
-path = "../arinc424"
+[dependencies]
+arinc424 = { path = "../arinc424" }
+
+[dev-dependencies]
+clap = { version = "4.5.18", features = ["derive"] }
