core: Compute variation for date and position
The open flightmaps ARINC 424 data might have blank MAG VAR fields. Thus, we
compute the variation from the word magnetic model (WMM).

Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/efb/Cargo.toml
+++ b/efb/Cargo.toml
@@ -22,6 +22,8 @@ keywords = [ "aviation", "EFB"]
 
 [dependencies]
 arinc424 = { path = "../arinc424" }
+time = "0.3.36"
+wmm = "0.2.3"
 
 [dev-dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
