c: Add script to build and format the efb.h header
This uses cbindgen to generate the header from the source files and clang-format
to do the formatting. The additional formatting step is needed since cbindgen
does not provide the desired options to format and we focus with this tool on
the process of creating the header in the first place.

Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/libefb-c/Cargo.toml
+++ b/libefb-c/Cargo.toml
@@ -17,9 +17,13 @@
 name = "efb-c"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 efb = { path = "../efb" }
+
+[build-dependencies]
+cbindgen = "0.27.0"
