c: Add a Route wrapper
Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/libefb-c/cbindgen.toml
+++ b/libefb-c/cbindgen.toml
@@ -29,6 +29,10 @@ usize_is_size_t = true
 
 [export.rename]
 "InputFormat" = "EfbInputFormat"
+"Leg" = "EfbLeg"
+
+[export.mangle]
+remove_underscores = true
 
 [macro_expansion]
 bitflags = true
