c: Add some core types to C-API
Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/libefb-c/cbindgen.toml
+++ b/libefb-c/cbindgen.toml
@@ -28,8 +28,14 @@ style = "type"
 usize_is_size_t = true
 
 [export.rename]
+"Angle" = "EfbAngle"
+"Distance" = "EfbDistance"
+"Duration" = "EfbDuration"
 "InputFormat" = "EfbInputFormat"
 "Leg" = "EfbLeg"
+"Speed" = "EfbSpeed"
+"VerticalDistance" = "EfbVerticalDistance"
+"Wind" = "EfbWind"
 
 [export.mangle]
 remove_underscores = true
