c: Add more core types and helper functions
Furthermore, derive Debug for more type for easier debug printing.

Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/libefb-c/cbindgen.toml
+++ b/libefb-c/cbindgen.toml
@@ -18,7 +18,7 @@ header = """
  */
 """
 include_guard = "EFB"
-sys_includes = ["stdlib.h"]
+sys_includes = ["stdbool.h", "stdlib.h"]
 no_includes = true
 cpp_compat = true
 documentation = true
