c: Simplify prefixing of types
Rather than renaming all type we export from the efb crate, we prefix them by
default and rename only wrapper we need.

Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/libefb-c/cbindgen.toml
+++ b/libefb-c/cbindgen.toml
@@ -27,15 +27,14 @@ documentation_length = "full"
 style = "type"
 usize_is_size_t = true
 
+[export]
+prefix = "Efb"
+renaming_overrides_prefixing = true
+
 [export.rename]
-"Angle" = "EfbAngle"
-"Distance" = "EfbDistance"
-"Duration" = "EfbDuration"
-"InputFormat" = "EfbInputFormat"
-"Leg" = "EfbLeg"
-"Speed" = "EfbSpeed"
-"VerticalDistance" = "EfbVerticalDistance"
-"Wind" = "EfbWind"
+# avoid double prefixing of wrapped types
+"EfbFMS" = "EfbFMS"
+"EfbRoute" = "EfbRoute"
 
 [export.mangle]
 remove_underscores = true
