c: Move C bindings into binding directory
Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/bindings/c/Cargo.toml
+++ b/bindings/c/Cargo.toml
@@ -17,13 +17,14 @@
 name = "efb-c"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
 build = "build.rs"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-efb = { path = "../efb" }
+efb = { path = "../../efb" }
 
 [build-dependencies]
 cbindgen = "0.27.0"
