c: Link example against cargo root target

--- a/bindings/c/examples/Makefile
+++ b/bindings/c/examples/Makefile
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 CFLAGS = -I$(PWD)/../include
-LDFLAGS = -L$(PWD)/../target/debug
+LDFLAGS = -L$(PWD)/../../../target/debug
 LIBS = -lefb_c
 
 .PHONY: flightplanner
