python: Add binding to FMS
Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@
 members = [
     "arinc424",
     "efb",
-    "bindings/c"
+    "bindings/c",
+    "bindings/python",
 ]
 
 [workspace.lints.rust]
