Update cargo to publish package
Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/arinc424/Cargo.toml
+++ b/arinc424/Cargo.toml
@@ -18,4 +18,8 @@ name = "arinc424"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
-keywords = ["ARINC", "ARINC 424"]
+description = "ARINC 424 parser"
+keywords = ["ARINC", "ARINC-424"]
+homepage = "https://github.com/pearjo/libefb"
+repository = "https://github.com/pearjo/libefb"
+readme = "README.md"
