core: Use latest world magnetic model from 2025
Since `wmm` seams to be not maintained anymore, change to another crate to get
the magnetic declination based on the WMM 2025 model.

Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/efb/Cargo.toml
+++ b/efb/Cargo.toml
@@ -28,7 +28,7 @@ readme = "../README.md"
 [dependencies]
 arinc424 = { path = "../arinc424", version = "0.1.1" }
 time = "0.3.36"
-wmm = "0.2.3"
+world_magnetic_model = "0.2.0"
 
 [dev-dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
