--- a/efb/Cargo.toml
+++ b/efb/Cargo.toml
@@ -27,8 +27,12 @@ readme = "../README.md"
 
 [dependencies]
 arinc424 = { path = "../arinc424", version = "0.1.1" }
+serde = { version = "1.0.219", features = ["derive", "rc"], optional = true  }
 time = "0.3.36"
 world_magnetic_model = "0.2.0"
 
 [dev-dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
+
+[features]
+serde = ["dep:serde"]
