--- a/efb/Cargo.toml
+++ b/efb/Cargo.toml
@@ -33,7 +33,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 arinc424 = { path = "../arinc424", version = "0.1.2" }
 geojson = { version = "0.24.2", optional = true }
 serde = { version = "1.0.219", features = ["derive", "rc"], optional = true  }
-time = "0.3.36"
+time = { version = "0.3.36", features = ["wasm-bindgen"] }
 world_magnetic_model = "0.2.0"
 
 [features]
