route: Return legs as GeoJSON
This should help to draw the route on a map. Furthermore, a bounding box fitting
the route is provided too. This allows to conveniently fit the route on a map.

Signed-off-by: Joe Pearson <pearjo@protonmail.com>

--- a/efb/Cargo.toml
+++ b/efb/Cargo.toml
@@ -25,11 +25,17 @@ homepage = "https://github.com/pearjo/libefb"
 repository = "https://github.com/pearjo/libefb"
 readme = "../README.md"
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [dependencies]
 arinc424 = { path = "../arinc424", version = "0.1.2" }
+geojson = { version = "0.24.2", optional = true }
 serde = { version = "1.0.219", features = ["derive", "rc"], optional = true  }
 time = "0.3.36"
 world_magnetic_model = "0.2.0"
 
 [features]
+geojson = ["dep:geojson"]
 serde = ["dep:serde"]
