--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,9 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 
+[COMMIT_EDITMSG]
+max_line_length = 72
+
 [*.swift]
 indent_size = 4
 max_line_length = 100
