nd: Add effective dates and validity to AIRAC cycle
Signed-off-by: Joe Pearson <joe@aeronauticalmaps.com>

--- a/efb/Cargo.toml
+++ b/efb/Cargo.toml
@@ -31,6 +31,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 arinc424 = { path = "../arinc424", version = "0.1.2" }
+chrono = "0.4.42"
 geojson = { version = "0.24.2", optional = true }
 serde = { version = "1.0.219", features = ["derive", "rc"], optional = true  }
 time = { version = "0.3.36", features = ["wasm-bindgen"] }
